# distributed-logger

./: .gitignore  README.md  main.py  pyproject.toml
src/: Aggregator.py  Server.py
tests/: test_aggregator.py  test_example.py  test_server.py
